--- a/app/views/branches/new.html.erb
+++ b/app/views/branches/new.html.erb
@@ -1,9 +1,9 @@
 <div class="page-header">
-  <%= link_to companies_path, :class => 'btn btn-default' do %>
+  <%= link_to company_branches_path(@company), :class => 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
     Back
   <% end %>
-  <h1>New company</h1>
+  <h1>New branch</h1>
 </div>
 
 <%= render 'form' %>
