--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,37 +1,41 @@
-<div class="page-header">
-  <%= link_to new_company_path, :class => 'btn btn-primary' do %>
-    <span class="glyphicon glyphicon-plus"></span>
-    New Company
-  <% end %>
-  <h1>Listing companies</h1>
-</div>
+<% content_for :nav do %>
+  <%= render "common/top_nav" %>
+<% end %>
 
-<div class="table-responsive">
-  <table class="table table-striped table-bordered table-hover">
-    <thead>
-      <tr>
-            <th>Cnpj</th>
-            <th>Alias</th>
-            <th>Name</th>
-            <th>Logo</th>
-            <th>Description</th>
-            <th></th>
-        <th></th>
-        <th></th>
-      </tr>
-    </thead>
+<div class="container">
+  <div class="page-header">
+    <%= link_to new_company_path, :class => 'btn btn-primary' do %>
+      <span class="glyphicon glyphicon-plus"></span>
+      New Company
+    <% end %>
+    <h1>Companies</h1>
+  </div>
 
-    <tbody>
-      <%= content_tag_for(:tr, @companies) do |company| %>
-            <td><%= company.cnpj %></td>
-            <td><%= company.alias %></td>
-            <td><%= company.name %></td>
-            <td><%= company.logo %></td>
-            <td><%= company.description %></td>
-            <td><%= link_to 'Show', company %></td>
-        <td><%= link_to 'Edit', edit_company_path(company) %></td>
-        <td><%= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      <% end %>
-    </tbody>
-  </table>
+  <div class="table-responsive">
+    <table class="table table-hover">
+      <thead>
+        <tr>
+              <th>Cnpj</th>
+              <th>Alias</th>
+              <th>Name</th>
+              <th></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <%= content_tag_for(:tr, @companies) do |company| %>
+              <td><%= company.cnpj %></td>
+              <td><%= company.alias %></td>
+              <td><%= company.name %></td>
+          <td>
+            <div class="btn-group pull-right" role="group" aria-label="...">
+              <a href="<%= company_path(company) %>" class="btn btn-default"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span></a>
+              <a href="<%= edit_company_path(company) %>" class="btn btn-default"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></a>
+              <%= link_to '<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>'.html_safe, company, method: :delete, class: 'btn btn-default' , data: { confirm: 'Are you sure?' } %>
+            </div>
+          </td>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
 </div>
