--- a/app/views/branches/_branches.html.erb
+++ b/app/views/branches/_branches.html.erb
@@ -3,44 +3,30 @@
     <span class="glyphicon glyphicon-plus"></span>
     New Branch
   <% end %>
-  <h1>Listing branches</h1>
+  <h1>Branches</h1>
 </div>
 
 <div class="table-responsive">
   <table class="table table-striped table-bordered table-hover">
     <thead>
       <tr>
-            <th>Company</th>
-            <th>Alias</th>
-            <th>Cep</th>
-            <th>Number</th>
-            <th>Street address</th>
-            <th>Neighborhood</th>
-            <th>City</th>
-            <th>Uf</th>
-            <th>Country</th>
-            <th>Complement</th>
-            <th></th>
-        <th></th>
-        <th></th>
+        <th style="width:50%;">Alias</th>
+        <th>Location</th>
+        <th style="width:140px;"></th>
       </tr>
     </thead>
 
     <tbody>
       <%= content_tag_for(:tr, @branches) do |branch| %>
-            <td><%= branch.company.name %></td>
             <td><%= branch.alias %></td>
-            <td><%= branch.cep %></td>
-            <td><%= branch.number %></td>
-            <td><%= branch.street_address %></td>
-            <td><%= branch.neighborhood %></td>
-            <td><%= branch.city %></td>
-            <td><%= branch.uf %></td>
-            <td><%= branch.country %></td>
-            <td><%= branch.complement %></td>
-            <td><%= link_to 'Show', company_branch_path(branch.company, branch) %></td>
-        <td><%= link_to 'Edit', edit_company_branch_path(branch.company, branch) %></td>
-        <td><%= link_to 'Destroy', company_branch_path(branch.company, branch), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= branch.city %> - <%= branch.uf %>, <%= branch.country %></td>
+            <td>
+              <div class="btn-group pull-right" role="group" aria-label="...">
+                <a href="<%= company_branch_path(branch.company, branch) %>" class="btn btn-default"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span></a>
+                <a href="<%= edit_company_branch_path(branch.company, branch) %>" class="btn btn-default"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></a>
+                <%= link_to '<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>'.html_safe, company_branch_path(branch.company, branch), class: 'btn btn-default', method: :delete, data: { confirm: 'Are you sure?' } %>
+              </div>
+            </td>
       <% end %>
     </tbody>
   </table>
