--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,32 +1,37 @@
-<div class="page-header">
-  <%= link_to companies_path, :class => 'btn btn-default' do %>
-    <span class="glyphicon glyphicon-list-alt"></span>
-    Back
-  <% end %>
-  <%= link_to edit_company_path(@company), :class => 'btn btn-primary' do %>
-    <span class="glyphicon glyphicon-pencil"></span>
-    Edit
-  <% end %>
-  <h1>Show company</h1>
+<% content_for :nav do %>
+  <%= render "common/top_nav" %>
+<% end %>
+<div class="container">
+  <div class="page-header">
+    <%= link_to companies_path, :class => 'btn btn-default' do %>
+      <span class="glyphicon glyphicon-list-alt"></span>
+      Back
+    <% end %>
+    <%= link_to edit_company_path(@company), :class => 'btn btn-primary' do %>
+      <span class="glyphicon glyphicon-pencil"></span>
+      Edit
+    <% end %>
+    <h1>Company</h1>
+  </div>
+
+  <dl class="dl-horizontal">
+    <dt>Cnpj:</dt>
+    <dd><%= @company.cnpj %></dd>
+
+    <dt>Alias:</dt>
+    <dd><%= @company.alias %></dd>
+
+    <dt>Name:</dt>
+    <dd><%= @company.name %></dd>
+
+    <dt>Logo:</dt>
+    <dd><%= @company.logo %></dd>
+
+    <dt>Description:</dt>
+    <dd><%= @company.description %></dd>
+
+  </dl>
+
+
+  <%= render partial: 'branches/branches'  %>
 </div>
-
-<dl class="dl-horizontal">
-  <dt>Cnpj:</dt>
-  <dd><%= @company.cnpj %></dd>
-
-  <dt>Alias:</dt>
-  <dd><%= @company.alias %></dd>
-
-  <dt>Name:</dt>
-  <dd><%= @company.name %></dd>
-
-  <dt>Logo:</dt>
-  <dd><%= @company.logo %></dd>
-
-  <dt>Description:</dt>
-  <dd><%= @company.description %></dd>
-
-</dl>
-
-
-<%= render partial: 'branches/branches'  %>
