--- a/app/views/branches/_branches.html.erb
+++ b/app/views/branches/_branches.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <div class="table-responsive">
-  <table class="table table-striped table-bordered table-hover">
+  <table class="table table-hover">
     <thead>
       <tr>
         <th style="width:50%;">Alias</th>
