--- a/app/views/branches/new.html.erb
+++ b/app/views/branches/new.html.erb
@@ -1,9 +1,15 @@
-<div class="page-header">
-  <%= link_to company_branches_path(@company), :class => 'btn btn-default' do %>
-    <span class="glyphicon glyphicon-list-alt"></span>
-    Back
-  <% end %>
-  <h1>New branch</h1>
-</div>
+<% content_for :nav do %>
+  <%= render "common/top_nav" %>
+<% end %>
 
-<%= render 'form' %>
+<div class="container">
+  <div class="page-header">
+    <%= link_to company_branches_path(@company), :class => 'btn btn-default' do %>
+      <span class="glyphicon glyphicon-list-alt"></span>
+      Back
+    <% end %>
+    <h1>New branch</h1>
+  </div>
+
+  <%= render 'form' %>
+</div>
