Changes label of form in add branches

--- a/app/views/branches/new.html.erb
+++ b/app/views/branches/new.html.erb
@@ -8,7 +8,7 @@
       <span class="glyphicon glyphicon-list-alt"></span>
       Back
     <% end %>
-    <h1>New branch</h1>
+    <h1>Add Branch</h1>
   </div>
 
   <%= render 'form' %>
