Implements layout of list branches

--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -1,1 +1,7 @@
-<%= render partial: 'branches'  %>
+<% content_for :nav do %>
+  <%= render "common/top_nav" %>
+<% end %>
+
+<div class="container">
+  <%= render partial: 'branches'  %>
+</div>
