--- a/app/views/branches/edit.html.erb
+++ b/app/views/branches/edit.html.erb
@@ -1,13 +1,19 @@
-<div class="page-header">
-  <%= link_to company_branches_path(@company), :class => 'btn btn-default' do %>
-    <span class="glyphicon glyphicon-list-alt"></span>
-    Back
-  <% end %>
-  <%= link_to company_branch_path(@company, @branch), :class => 'btn btn-primary' do %>
-    <span class="glyphicon glyphicon-info-sign"></span>
-    Show
-  <% end %>
-  <h1>Editing branch</h1>
-</div>
+<% content_for :nav do %>
+  <%= render "common/top_nav" %>
+<% end %>
 
-<%= render 'form' %>
+<div class="container">
+  <div class="page-header">
+    <%= link_to company_branches_path(@company), :class => 'btn btn-default' do %>
+      <span class="glyphicon glyphicon-list-alt"></span>
+      Back
+    <% end %>
+    <%= link_to company_branch_path(@company, @branch), :class => 'btn btn-primary' do %>
+      <span class="glyphicon glyphicon-info-sign"></span>
+      Show
+    <% end %>
+    <h1>Branch</h1>
+  </div>
+
+  <%= render 'form' %>
+</div>
