--- a/app/views/common/_top_nav.html.erb
+++ b/app/views/common/_top_nav.html.erb
@@ -8,30 +8,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="">Fisioeng</a>
+      <a class="navbar-brand" href="<%= root_path %>">Fisioeng</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="dropdown active">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Company <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Company Registry</a></li>
-            <li><a href="#">Branches Registries</a></li>
-          </ul>
-        </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Analyte <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Profiles</a></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">User <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">New User</a></li>
-            <li><a href="#">View Users</a></li>
+            <li><a href="<%= specie_profiles_path %>">Profiles</a></li>
           </ul>
         </li>
         <li class="dropdown">
