Adds a footer to application

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,5 +28,9 @@
     <% end %>
   </div>
   <%= yield %>
+
+  <footer>
+    <p>&copy; 2014 - <%= Time.new.year %> - Fisioeng - All rights reserved.</p>
+  </footer>
 </body>
 </html>
