--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -15,7 +15,7 @@
     <table class="table table-hover">
       <thead>
         <tr>
-              <th>Cnpj</th>
+              <th>CPNJ</th>
               <th>Alias</th>
               <th>Name</th>
               <th></th>
