--- a/app/views/analytes/new.html.erb
+++ b/app/views/analytes/new.html.erb
@@ -1,9 +1,11 @@
-<div class="page-header">
-  <%= link_to company_branch_analytes_path, :class => 'btn btn-default' do %>
-    <span class="glyphicon glyphicon-list-alt"></span>
-    Back
-  <% end %>
-  <h1>New analyte</h1>
-</div>
+<% content_for :nav do %>
+  <%= render "common/top_nav" %>
+<% end %>
 
-<%= render 'form' %>
+<div class="container">
+  <div class="page-header">
+    <h1>Add analyte</h1>
+  </div>
+
+  <%= render 'form' %>
+</div>
