Show specie name in analyte list table

--- a/app/views/analytes/_analytes.html.erb
+++ b/app/views/analytes/_analytes.html.erb
@@ -19,7 +19,7 @@
 
     <tbody>
       <%= content_tag_for(:tr, @analytes) do |analyte| %>
-            <td><%= analyte.specie_profile %></td>
+            <td><%= analyte.specie_profile.especiename %></td>
             <td><%= analyte.code %></td>
             <td><%= analyte.name %></td>
             <td>
