--- a/app/views/analytes/_form.html.erb
+++ b/app/views/analytes/_form.html.erb
@@ -15,7 +15,7 @@
   <div class="form-group">
     <%= f.label :specie_profile, :class => "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.text_field :specie_profile, :class => "form-control" %>
+      <%= select_tag :specie_profile_id, options_for_select(@profiles, @analyte.specie_profile_id), :class => "form-control" %>
     </div>
   </div>
   <div class="form-group">
@@ -33,7 +33,7 @@
   <div class="form-group">
     <%= f.label :birthdate, :class => "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.date_select :birthdate, :class => "form-control" %>
+      <%= f.text_field :birthdate, :class => "form-control" %>
     </div>
   </div>
   <div class="form-group">
