--- a/app/views/analytes/index.html.erb
+++ b/app/views/analytes/index.html.erb
@@ -1,7 +1,1 @@
-<% content_for :nav do %>
-  <%= render "common/top_nav" %>
-<% end %>
-
-<div class="container">
-  <%= render partial: 'analytes'  %>
-</div>
+<%= render partial: 'branches/show'  %>
