Make the branches index the same of show companies

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,34 +1,1 @@
-<% content_for :nav do %>
-  <%= render "common/top_nav" %>
-<% end %>
-<div class="container">
-  <%= render partial: 'branches/branches'  %>
-
-  <div class="page-header">
-    <%= link_to edit_company_path(@company), :class => 'btn btn-primary' do %>
-      <span class="glyphicon glyphicon-pencil"></span>
-      Edit
-    <% end %>
-    <h3>Company</h3>
-  </div>
-
-  <table class="table table-hover">
-    <tr>
-      <th style="width:225px;">CNPJ:</th>
-      <td><%= @company.cnpj %></td>
-    </tr>
-    <tr>
-      <th>Alias:</th>
-      <td><%= @company.alias %></td>
-    </tr>
-    <tr>
-      <th>Name:</th>
-      <td><%= @company.name %></td>
-    </tr>
-    <tr>
-      <th>Description:</th>
-      <td><%= @company.description %></td>
-    </tr>
-  </table class="table table-hover">
-
-</div>
+<%= render partial: 'show'  %>
