--- a/app/views/common/_top_nav.html.erb
+++ b/app/views/common/_top_nav.html.erb
@@ -1,4 +1,4 @@
-<nav ng-controller="CompanyTopemenuMainController" class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -42,7 +42,7 @@
           </ul>
         </li>
       </ul>
-      <ul ng-controller="CompanyTopemenuProfileController" class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
