Putz scripts in end of body

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,9 @@
   <![endif]-->
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body ng-app="Fisioeng">
   <%= yield :nav %>
   <div class="container">
     <% flash.each do |name, msg| %>
@@ -32,5 +31,7 @@
   <footer>
     <p>&copy; 2014 - <%= Time.new.year %> - Fisioeng - All rights reserved.</p>
   </footer>
+
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 </body>
 </html>
