--- a/app/views/analytes/show.html.erb
+++ b/app/views/analytes/show.html.erb
@@ -2,43 +2,166 @@
   <%= render "common/top_nav" %>
 <% end %>
 
-<div class="container">
+<div ng-controller="ShowAnalyteController" class="container">
   <div class="page-header">
-    <%= link_to company_branch_analytes_path, :class => 'btn btn-default' do %>
-      <span class="glyphicon glyphicon-list-alt"></span>
-      Back
-    <% end %>
-    <%= link_to edit_company_branch_analyte_path(@company, @branch, @analyte), :class => 'btn btn-primary' do %>
-      <span class="glyphicon glyphicon-pencil"></span>
-      Edit
-    <% end %>
-    <h1>Analyte</h1>
+
+    <h3>Analyte</h3>
   </div>
 
-  <dl class="dl-horizontal">
-    <dt>Branch:</dt>
-    <dd><%= @analyte.branch.alias %></dd>
+  <table class="table table-bordered pull-left" style="width: 400px; margin-right: 50px;">
+      <tr>
+        <th width="150" colspan="2">
+          Analyte Informations
+          <div class="btn-group pull-right" role="group" aria-label="...">
+              <a href="<%= edit_company_branch_analyte_path(@company, @branch, @analyte) %>" class="btn btn-default"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></a>
+              <%= link_to '<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>'.html_safe, company_branch_analyte_path(@company, @branch, @analyte), class: 'btn btn-default', method: :delete, data: { confirm: 'Are you sure?' } %>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <th width="150">Name</th>
+        <td width="250"><%= @analyte.name %></td>
+      </tr>
+      <tr>
+        <th>Identify Code</th>
+        <td><%= @analyte.code %></td>
+      </tr>
+      <tr>
+        <th>Specie</th>
+        <td><%= defined?(@analyte.specie_profile.especiename) ? @analyte.specie_profile.especiename : '-' %></td>
+      </tr>
+      <tr>
+        <th>Birthdate</th>
+        <td><%= @analyte.birthdate %></td>
+      </tr>
+      <tr>
+        <th>Weight</th>
+        <td><%= @analyte.weight %> Kg</td>
+      </tr>
+      <tr>
+        <th>Color</th>
+        <td><%= @analyte.color %></td>
+      </tr>
+      <tr>
+        <th>Lanado</th>
+        <td><%= @analyte.lanado %></td>
+      </tr>
+  </table>
 
-    <dt>Specie profile:</dt>
-    <dd><%= defined?(@analyte.specie_profile.especiename) ? @analyte.specie_profile.especiename : '-' %></dd>
+  <div class="pull-right" style="
+    max-height: 331px;
+    overflow-y: scroll;
+    width: 60%;
+">
 
-    <dt>Code:</dt>
-    <dd><%= @analyte.code %></dd>
+<nav style="display: none;" class="pull-left">
+  <ul class="pagination">
+    <li>
+      <a href="#" aria-label="Previous">
+        <span aria-hidden="true">«</span>
+      </a>
+    </li>
+    <li><a href="#">1</a></li>
+    <li><a href="#">2</a></li>
+    <li><a href="#">3</a></li>
+    <li><a href="#">4</a></li>
+    <li><a href="#">5</a></li>
+    <li>
+      <a href="#" aria-label="Next">
+        <span aria-hidden="true">»</span>
+      </a>
+    </li>
+  </ul>
+</nav>
 
-    <dt>Name:</dt>
-    <dd><%= @analyte.name %></dd>
+  <div class="small pull-right" style="margin-right: 15px;">Showing <b> <%= @measure_count %></b> of <b><%= @measure_count %></b> registries </div>
+    <table class="table table-hover">
+        <thead>
+            <tr>
+              <th style="vertical-align: middle;" width="200">Measure Data</th>
+              <th style="vertical-align: middle;" width="100">Date and time</th>
+              <th style="vertical-align: middle;" width="30"></th>
+            </tr>
+        </thead>
+        <tbody>
+        <%= content_tag_for(:tr, @measures) do |measure| %>
+          <td style="vertical-align: middle;"><%= measure.value %> <%= measure.unit %></td>
+          <td style="vertical-align: middle;"><%= measure.created_at %></td>
+          <td style="vertical-align: middle;">
+              <a href="#" class="btn btn-default pull-right"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a>
+          </td>
+        <% end %>
+        </tbody>
+    </table>
+    <nav style="display: none;" class="pull-left">
+      <ul class="pagination">
+        <li>
+          <a href="#" aria-label="Previous">
+            <span aria-hidden="true">«</span>
+          </a>
+        </li>
+        <li><a href="#">1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">4</a></li>
+        <li><a href="#">5</a></li>
+        <li>
+          <a href="#" aria-label="Next">
+            <span aria-hidden="true">»</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+  <form class="form-horizontal" style="margin: 20px;">
+    <div class="form-group" style="float:left;">
+      <label for="inputEmail3" class="col-sm-4 control-label">Y-axis</label>
+      <div class="col-sm-10">
+        <select class="form-control">
+            <option>Temperature °C</option>
+            <option>Heart Frequency b/s</option>
+            <option>Ph</option>
+            <option>Relative Umidity %</option>
+        </select>
+      </div>
+    </div>
+    <div class="form-group" style="float:left;">
+      <label for="inputPassword3" class="col-sm-4 control-label">X-axis</label>
+      <div class="col-sm-10">
+        <select class="form-control">
+          <option>Time</option>
+            <option>Temperature °C</option>
+            <option>Heart Frequency b/s</option>
+            <option>Ph</option>
+            <option>Relative Umidity %</option>
+        </select>
+      </div>
+    </div>
+    <div class="form-group" style="float:left; text-align: center;">
+      <label for="inputPassword3" class="col-sm-8 control-label">Comparsion data</label>
+      <div class="col-sm-10">
+        <select class="form-control">
+          <option>Weight</option>
+            <option>Lanado</option>
+            <option>Color</option>
+        </select>
+      </div>
+    </div>
+    <div class="form-group" style="float:left; text-align: center;">
+      <label for="inputPassword3" class="col-sm-6 control-label">Layout</label>
+      <div class="col-sm-10">
+        <select class="form-control">
+          <option>Simple chart</option>
+            <option>WIth back data</option>
+            <option>3D</option>
+            <option>Data Dispersion</option>
+        </select>
+      </div>
+    </div>
+  </form>
 
-    <dt>Birthdate:</dt>
-    <dd><%= @analyte.birthdate %></dd>
+  <highchart id="chart1" config="chartConfig" class="span9" ></highchart>
 
-    <dt>Weight:</dt>
-    <dd><%= @analyte.weight %></dd>
-
-    <dt>Lanado:</dt>
-    <dd><%= @analyte.lanado %></dd>
-
-    <dt>Color:</dt>
-    <dd><%= @analyte.color %></dd>
-
-  </dl>
 </div>
+
+
