--- a/app/views/specie_profiles/edit.html.erb
+++ b/app/views/specie_profiles/edit.html.erb
@@ -1,13 +1,19 @@
-<div class="page-header">
-  <%= link_to specie_profiles_path, :class => 'btn btn-default' do %>
-    <span class="glyphicon glyphicon-list-alt"></span>
-    Back
-  <% end %>
-  <%= link_to @specie_profile, :class => 'btn btn-primary' do %>
-    <span class="glyphicon glyphicon-info-sign"></span>
-    Show
-  <% end %>
-  <h1>Editing specie_profile</h1>
-</div>
+<% content_for :nav do %>
+  <%= render "common/top_nav" %>
+<% end %>
 
-<%= render 'form' %>
+<div class="container">
+  <div class="page-header">
+    <%= link_to specie_profiles_path, :class => 'btn btn-default' do %>
+      <span class="glyphicon glyphicon-list-alt"></span>
+      Back
+    <% end %>
+    <%= link_to @specie_profile, :class => 'btn btn-primary' do %>
+      <span class="glyphicon glyphicon-info-sign"></span>
+      Show
+    <% end %>
+    <h1>Edit Specie Profile</h1>
+  </div>
+
+  <%= render 'form' %>
+</div>
