--- a/app/views/companies/_show.html.erb
+++ b/app/views/companies/_show.html.erb
@@ -2,6 +2,9 @@
   <%= render "common/top_nav" %>
 <% end %>
 <div class="container">
+
+  <% breadcrumb :company, @company %>
+
   <%= render partial: 'branches/branches'  %>
 
   <div class="page-header">
