--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -3,6 +3,9 @@
 <% end %>
 
 <div class="container">
+
+  <% breadcrumb :company, @company %>
+
   <div class="page-header">
     <%= link_to companies_path, :class => 'btn btn-default' do %>
       <span class="glyphicon glyphicon-list-alt"></span>
