--- a/app/views/specie_profiles/index.html.erb
+++ b/app/views/specie_profiles/index.html.erb
@@ -3,6 +3,9 @@
 <% end %>
 
 <div class="container">
+
+  <% breadcrumb :specie_profiles %>
+
   <div class="page-header">
     <%= link_to new_specie_profile_path, :class => 'btn btn-primary' do %>
       <span class="glyphicon glyphicon-plus"></span>
