--- a/app/views/analytes/new.html.erb
+++ b/app/views/analytes/new.html.erb
@@ -3,6 +3,9 @@
 <% end %>
 
 <div class="container">
+
+  <% breadcrumb( :new_analyte, @company, @branch ) %>
+
   <div class="page-header">
     <h1>Add analyte</h1>
   </div>
