--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -2,6 +2,9 @@
   <%= render "common/top_nav" %>
 <% end %>
 <div class="container">
+
+  <% breadcrumb :new_company %>
+
   <div class="page-header">
     <%= link_to companies_path, :class => 'btn btn-default' do %>
       <span class="glyphicon glyphicon-list-alt"></span>
