--- a/app/views/analytes/show.html.erb
+++ b/app/views/analytes/show.html.erb
@@ -98,7 +98,10 @@
       </tr>
   </table>
 
+  <div class="small pull-right" style="margin-right: 15px;"><%= page_entries_info @measures %></div>
   <%= render "measures/list" %>
+  <%= paginate @measures %>
+
 </div>
 
 
