--- a/app/views/analytes/show.html.erb
+++ b/app/views/analytes/show.html.erb
@@ -9,55 +9,7 @@
     <h3>Analyte</h3>
   </div>
 
-  <form class="form-horizontal" style="margin: 20px;">
-    <div class="form-group" style="float:left;">
-      <label for="inputEmail3" class="col-sm-4 control-label">Y-axis</label>
-      <div class="col-sm-10">
-        <select class="form-control">
-            <option>Temperature °C</option>
-            <option>Heart Frequency b/s</option>
-            <option>Ph</option>
-            <option>Relative Umidity %</option>
-        </select>
-      </div>
-    </div>
-    <div class="form-group" style="float:left;">
-      <label for="inputPassword3" class="col-sm-4 control-label">X-axis</label>
-      <div class="col-sm-10">
-        <select class="form-control">
-          <option>Time</option>
-            <option>Temperature °C</option>
-            <option>Heart Frequency b/s</option>
-            <option>Ph</option>
-            <option>Relative Umidity %</option>
-        </select>
-      </div>
-    </div>
-    <div class="form-group" style="float:left; text-align: center;">
-      <label for="inputPassword3" class="col-sm-8 control-label">Comparsion data</label>
-      <div class="col-sm-10">
-        <select class="form-control">
-          <option>Weight</option>
-            <option>Lanado</option>
-            <option>Color</option>
-        </select>
-      </div>
-    </div>
-    <div class="form-group" style="float:left; text-align: center;">
-      <label for="inputPassword3" class="col-sm-6 control-label">Layout</label>
-      <div class="col-sm-10">
-        <select class="form-control">
-          <option>Simple chart</option>
-            <option>WIth back data</option>
-            <option>3D</option>
-            <option>Data Dispersion</option>
-        </select>
-      </div>
-    </div>
-  </form>
-
-  <highchart id="chart1" config="chartConfig" class="span9" ></highchart>
-
+  <%=  render "measures/graph/main" %>
   <table class="table table-bordered">
       <tr>
         <th width="150" colspan="2">
