Make service do modify measures from sampling

--- a/app/views/samplings/show.html.erb
+++ b/app/views/samplings/show.html.erb
@@ -17,3 +17,4 @@
   <%= paginate @measures %>
 </div>
 
+<meta name="measures_route" content="<%= company_branch_analyte_sampling_measures_url(@company, @branch, @analyte, @sampling, format: :json) %>"
