--- a/app/views/samplings/show.html.erb
+++ b/app/views/samplings/show.html.erb
@@ -5,7 +5,7 @@
   data-no-turbolink="true"
 <% end %>
 
-<div ng-controller="ShowAnalyteController" class="container">
+<div class="container" ng-controller="GraphController">
   <div class="page-header">
     <h3><%= @sampling.name %></h3>
   </div>
