--- a/app/views/samplings/_form.html.erb
+++ b/app/views/samplings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@sampling, :html => { :class => "form-horizontal", :role => "form" }) do |f| %>
+<%= simple_form_for([@company, @branch, @analyte, @sampling] , :html => { :class => "form-horizontal", :role => "form" }, action: company_branch_analyte_samplings_path(@company, @branch, @analyte)) do |f| %>
   <% if @sampling.errors.any? %>
     <div class="alert alert-danger alert-dismissable" role="alert">
       <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
@@ -12,12 +12,6 @@
     </div>
   <% end %>
 
-  <div class="form-group">
-    <%= f.label :analyte, :class => "col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.text_field :analyte, :class => "form-control" %>
-    </div>
-  </div>
   <div class="form-group">
     <%= f.label :name, :class => "col-sm-2 control-label" %>
     <div class="col-sm-10">
