--- a/app/views/samplings/_list.html.erb
+++ b/app/views/samplings/_list.html.erb
@@ -1,4 +1,8 @@
 <div class="page-header">
+  <%= link_to new_company_branch_analyte_sampling_path(@company, @branch, @analyte), :class => 'btn btn-primary' do %>
+    <span class="glyphicon glyphicon-plus"></span>
+    New Sampling
+  <% end %>
   <h3>Samplings</h3>
 </div>
 
@@ -17,6 +21,7 @@
         <td>
           <div class="btn-group pull-right" role="group" aria-label="...">
             <a href="<%= company_branch_analyte_sampling_url(@company, @branch, @analyte, sampling) %>" class="btn btn-default"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span></a>
+            <%= link_to '<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>'.html_safe, edit_company_branch_analyte_sampling_path(@company, @branch, @analyte, sampling), class: 'btn btn-default' %>
             <%= link_to '<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>'.html_safe, company_branch_analyte_samplings_path(@company, @branch, @analyte, sampling), class: 'btn btn-default', method: :delete, data: { confirm: 'Are you sure?' } %>
           </div>
         </td>
