--- a/app/views/samplings/edit.html.erb
+++ b/app/views/samplings/edit.html.erb
@@ -1,13 +1,21 @@
-<div class="page-header">
-  <%= link_to samplings_path, :class => 'btn btn-default' do %>
-    <span class="glyphicon glyphicon-list-alt"></span>
-    Back
-  <% end %>
-  <%= link_to @sampling, :class => 'btn btn-primary' do %>
-    <span class="glyphicon glyphicon-info-sign"></span>
-    Show
-  <% end %>
-  <h1>Editing sampling</h1>
-</div>
+<% content_for :nav do %>
+  <%= render "common/top_nav" %>
+<% end %>
 
-<%= render 'form' %>
+<div class="container">
+  <% breadcrumb( :sampling, @company, @branch, @analyte, @sampling ) %>
+
+  <div class="page-header">
+    <%= link_to company_branch_analyte_path(@company, @branch, @analyte), :class => 'btn btn-default' do %>
+      <span class="glyphicon glyphicon-list-alt"></span>
+      Back
+    <% end %>
+    <%= link_to company_branch_analyte_sampling_path(@company, @branch, @analyte, @sampling), :class => 'btn btn-primary' do %>
+      <span class="glyphicon glyphicon-info-sign"></span>
+      Show
+    <% end %>
+    <h1>Edit sampling</h1>
+  </div>
+
+  <%= render 'form' %>
+</div>
